# cityhelper-back

./: .gitignore  Dockerfile  README.md  db.sqlite3  manage.py  pyproject.toml
cityhelper/: asgi.py  prod_settings.py  settings.py  urls.py  wsgi.py
solicitation/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
solicitation/migrations/: 0001_initial.py  0002_auto_20210207_0536.py  0003_auto_20210207_0546.py  0004_solicitation_processo_status.py  0005_auto_20210207_0609.py  0006_solicitation_enviado_por.py
